[gd_scene load_steps=7 format=3 uid="uid://nre8vvqmqqoi"]

[ext_resource type="Script" path="res://Scenes/Scripts/Enemy AI/Shooter.gd" id="1_vs1m5"]
[ext_resource type="Texture2D" uid="uid://chiswos0gntdd" path="res://Sprites/Characters and items/Gun.png" id="2_rimn0"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_5xtno"]
radius = 61.0
height = 192.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_nfhye"]
radius = 70.0
height = 214.0

[sub_resource type="CircleShape2D" id="CircleShape2D_iiktk"]
radius = 877.663

[sub_resource type="CircleShape2D" id="CircleShape2D_13upx"]
radius = 447.881

[node name="Shooter" type="CharacterBody2D" groups=["Enemy"]]
collision_layer = 2
collision_mask = 3
motion_mode = 1
script = ExtResource("1_vs1m5")

[node name="Gun" type="Sprite2D" parent="."]
position = Vector2(0, 7.10543e-15)
scale = Vector2(0.0232092, 0.0868644)
texture = ExtResource("2_rimn0")

[node name="RayCast2D" type="RayCast2D" parent="."]
target_position = Vector2(25, 25)
collision_mask = 128

[node name="htibox" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_5xtno")

[node name="Hurt_Timer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="Shoot_Timer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true
autostart = true

[node name="Hurtbox" type="Area2D" parent="."]

[node name="Hurtbox_collision" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource("CapsuleShape2D_nfhye")

[node name="Player_Detection_Range" type="Area2D" parent="."]

[node name="Collision_Shape" type="CollisionShape2D" parent="Player_Detection_Range"]
shape = SubResource("CircleShape2D_iiktk")

[node name="PLayer_Too_Close_Range" type="Area2D" parent="."]

[node name="Collision_Shape_2" type="CollisionShape2D" parent="PLayer_Too_Close_Range"]
shape = SubResource("CircleShape2D_13upx")

[connection signal="timeout" from="Shoot_Timer" to="." method="_on_shoot_timer_timeout"]
